# udemy-mlops-course

dvc/: .gitignore  images.dvc
dvc/.dvc/: config
dvc/dvc-pipelines/: dvc.yaml  evaluate.py  params.yaml  prepare_data.py  requirements.txt
mlflow/mlflow-tracking-server/: .dockerignore  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  test.py
mlflow/mlflow-tracking-server/.envs/: .mlflow-common  .mlflow-dev  .postgres
mlflow/mlflow-tracking-server/docker/: Dockerfile  run-server.sh
mlflow/mlflow-tracking-server/examples/mlflow-model-registry-benim/: README.md  fetch-model-from-registry.py  mlflow-registry-example.py
mlflow/mlflow-tracking-server/examples/mlflow-tracking/: mlflow-tracking.py
mlflow/tracking/: mlflow.db  requirements.txt  tracking.py
