[tool.poetry]
name = "mlflow-tracking-server"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["Kıvanç Yüksel <emkademy@gmail.com>"]
repository="https://github.com/kivancyuksel/mlflow-tracking-server.git"
classifiers= []

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


